--- a/task_1_html_css/src/card.html
+++ b/task_1_html_css/src/card.html
@@ -9,7 +9,7 @@
 
     <script src="./main.ts" type="module"></script>
   </head>
-  <body>
+  <body class="card-body">
     <article>
       <header>
         <h1>How to start?</h1>
