--- a/task_1_html_css/src/index.html
+++ b/task_1_html_css/src/index.html
@@ -5,6 +5,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Document</title>
+    <link href="default.css" rel="stylesheet" />
     <link href="layout.css" rel="stylesheet" />
     <link href="card.css" rel="stylesheet" />
 
@@ -113,6 +114,7 @@
           </ul>
         </footer>
       </article>
+
       <article>
         <header>
           <h1>A card with a table</h1>
