--- a/task_1_html_css/src/contact.html
+++ b/task_1_html_css/src/contact.html
@@ -5,6 +5,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Document</title>
+    <link href="default.css" rel="stylesheet" />
     <link href="layout.css" rel="stylesheet" />
 
     <script src="./main.ts" type="module"></script>
@@ -40,7 +41,54 @@
     </section>
 
     <main>
-<!--      TODO add form here-->
+      <form>
+        <ul>
+          <li>
+            <h2>Name</h2>
+          </li>
+          <li>
+            <input type="text" placeholder="Jane Doe">
+          </li>
+          <li>
+            <h2>Email address</h2>
+          </li>
+          <li>
+            <input type="email" placeholder="jane.doe@example.com">
+          </li>
+          <li>
+            <h2>Birthday</h2>
+          </li>
+          <li>
+            <input type="date" placeholder="">
+          </li>
+          <li>
+            <h2>Do you consent to our terms?</h2>
+          </li>
+          <li>
+            <div>
+              <input type="radio">
+              <label>Yes</label>
+            </div>
+            <div>
+              <input type="radio">
+              <label>Yes</label>
+            </div>
+          </li>
+          <li>
+            <h2>Please provide a joke:</h2>
+          </li>
+          <li>
+            <input type="text" placeholder="Go on, get creative.">
+          </li>
+          <li>
+            
+          </li>
+          <li>
+            <button class="bluebutton">Submit</button>
+            <button>Reset</button>
+          </li>
+        </ul>
+      </form>
     </main>
 
     <footer>
