--- a/task_1_html_css/src/index.html
+++ b/task_1_html_css/src/index.html
@@ -48,8 +48,9 @@
         <header>
           <h1>How to start?</h1>
           <a href="#"><i class="fa fa-solid fa-edit"></i> Edit</a>
+          <a href="#"><input type="checkbox" id="card-check" class="card-check"></a>
         </header>
-        <main>
+        <main id="special">
           <h1>Here are some tips</h1>
           <p>First think about where to you need some flexbox layout.</p>
           <ol>
