--- a/task_1_html_css/src/contact.html
+++ b/task_1_html_css/src/contact.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -9,90 +10,84 @@
     <link href="layout.css" rel="stylesheet" />
 
     <script src="./main.ts" type="module"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <h1>Contact</h1>
+        <h1>Contact</h1>
     </header>
 
     <section>
-      <ul>
-        <li>
-          <a href="/" title="Home"
-            ><i class="fa-solid fa-home"></i> <span>Home</span></a
-          >
-        </li>
-        <li>
-          <a href="/" title="Dashboard"
-            ><i class="fa-solid fa-dashboard"></i> <span>Dashboard</span></a
-          >
-        </li>
-        <li>
-          <a href="/" title="Profile"
-            ><i class="fa-solid fa-user"></i> <span>Profile</span></a
-          >
-        </li>
-        <li>
-          <a href="./contact.html" title="Contact"
-            ><i class="fa-solid fa-message"></i> <span>Contact</span></a
-          >
-        </li>
-      </ul>
+        <ul>
+            <li>
+                <a href="/" title="Home"><i class="fa-solid fa-home"></i> <span>Home</span></a>
+            </li>
+            <li>
+                <a href="/" title="Dashboard"><i class="fa-solid fa-dashboard"></i> <span>Dashboard</span></a>
+            </li>
+            <li>
+                <a href="/" title="Profile"><i class="fa-solid fa-user"></i> <span>Profile</span></a>
+            </li>
+            <li>
+                <a href="./contact.html" title="Contact"><i class="fa-solid fa-message"></i> <span>Contact</span></a>
+            </li>
+        </ul>
     </section>
 
     <main>
-      <form>
-        <ul>
-          <li>
-            <h2>Name</h2>
-          </li>
-          <li>
-            <input type="text" placeholder="Jane Doe">
-          </li>
-          <li>
-            <h2>Email address</h2>
-          </li>
-          <li>
-            <input type="email" placeholder="jane.doe@example.com">
-          </li>
-          <li>
-            <h2>Birthday</h2>
-          </li>
-          <li>
-            <input type="date" placeholder="">
-          </li>
-          <li>
-            <h2>Do you consent to our terms?</h2>
-          </li>
-          <li>
-            <div>
-              <input type="radio">
-              <label>Yes</label>
-            </div>
-            <div>
-              <input type="radio">
-              <label>Yes</label>
-            </div>
-          </li>
-          <li>
-            <h2>Please provide a joke:</h2>
-          </li>
-          <li>
-            <input type="text" placeholder="Go on, get creative.">
-          </li>
-          <li>
-            
-          </li>
-          <li>
-            <button class="bluebutton">Submit</button>
-            <button>Reset</button>
-          </li>
-        </ul>
-      </form>
+        <form>
+            <ul>
+                <li>
+                    <h2>Name</h2>
+                </li>
+                <li>
+                    <input type="text" placeholder="Jane Doe">
+                </li>
+                <li>
+                    <h2>Email address</h2>
+                </li>
+                <li>
+                    <input type="email" placeholder="jane.doe@example.com">
+                </li>
+                <li>
+                    <h2>Birthday</h2>
+                </li>
+                <li>
+                    <input type="date" placeholder="">
+                </li>
+                <li>
+                    <h2>Do you consent to our terms?</h2>
+                </li>
+                <li>
+                    <div>
+                        <input type="radio">
+                        <label>Yes</label>
+                    </div>
+                    <div>
+                        <input type="radio">
+                        <label>Yes</label>
+                    </div>
+                </li>
+                <li>
+                    <h2>Please provide a joke:</h2>
+                </li>
+                <li>
+                    <input type="text" placeholder="Go on, get creative.">
+                </li>
+                <li>
+
+                </li>
+                <li>
+                    <button class="bluebutton">Submit</button>
+                    <button>Reset</button>
+                </li>
+            </ul>
+        </form>
     </main>
 
     <footer>
-      <div>Made with <i class="fa-solid fa-heart"></i> by David Sichau</div>
+        <div>Made with <i class="fa-solid fa-heart"></i> by David Sichau</div>
     </footer>
-  </body>
+</body>
+
 </html>
