My changes & improvements

--- a/task_1_html_css/src/card.html
+++ b/task_1_html_css/src/card.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cards | Open data explorer</title>
     <link href="default.css" rel="stylesheet" />
     <link href="card.css" rel="stylesheet" />
 
