--- a/task_1_html_css/src/contact.html
+++ b/task_1_html_css/src/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Document</title>
+    <title>Contact</title>
     <link href="default.css" rel="stylesheet" />
     <link href="layout.css" rel="stylesheet" />
 
@@ -38,41 +38,41 @@
         <form>
             <ul>
                 <li>
-                    <h2>Name</h2>
+                    <label for="name">Name<sup>*</sup></label>
                 </li>
                 <li>
-                    <input type="text" placeholder="Jane Doe">
+                    <input type="text" name="name" id="name" required minlength="4" placeholder="Jane Doe">
                 </li>
                 <li>
-                    <h2>Email address</h2>
+                    <label for="email">Email address<sup>*</sup></label>
                 </li>
                 <li>
-                    <input type="email" placeholder="jane.doe@example.com">
+                    <input type="email" name="email" id="email" required placeholder="jane.doe@example.com">
                 </li>
                 <li>
-                    <h2>Birthday</h2>
+                    <label for="dob">Birthday<sup>*</sup></label>
                 </li>
                 <li>
-                    <input type="date" placeholder="">
+                    <input type="date" name="dob" id="dob" required placeholder="">
                 </li>
                 <li>
-                    <h2>Do you consent to our terms?</h2>
+                    <label for="terms">Do you consent to our terms?<sup>*</sup></label>
                 </li>
                 <li>
                     <div>
-                        <input type="radio">
-                        <label>Yes</label>
+                        <input type="radio" name="terms" id="yes-1" required value="YES">
+                        <label for="yes-1">Yes</label>
                     </div>
                     <div>
-                        <input type="radio">
-                        <label>Yes</label>
+                        <input type="radio" name="terms" id="yes-2" required value="yes">
+                        <label for="yes-2">Yes</label>
                     </div>
                 </li>
                 <li>
-                    <h2>Please provide a joke:</h2>
+                    <label for="joke">Please provide a joke:</label>
                 </li>
                 <li>
-                    <input type="text" placeholder="Go on, get creative.">
+                    <input type="text" name="joke" id="joke" minlength="5" placeholder="Go on, get creative.">
                 </li>
                 <li>
 
