multi-window support

--- a/task_1_html_css/src/index.html
+++ b/task_1_html_css/src/index.html
@@ -41,9 +41,7 @@
         <article>
             <header>
                 <input type="checkbox" id="card-check" class="card-check">
-                <!-- <label for="card-check" class="card-open-symbol">&#9655;</label> -->
-                <!-- TODO: If using FontAwesome icons, switch to -down and update css -->
-                <label for="card-check" class="card-open-symbol"><i class="fa-solid fa-caret-right"></i></label>
+                <label for="card-check" class="card-open-symbol"><i class="fa-solid fa-caret-down"></i></label>
                 <h1>How to start?</h1>
                 <a href="#"><i class="fa fa-solid fa-edit"></i> Edit</a>
             </header>
@@ -108,6 +106,8 @@
 
         <article>
             <header>
+                <input type="checkbox" id="card-check-1" class="card-check">
+                <label for="card-check-1" class="card-open-symbol"><i class="fa-solid fa-caret-down"></i></label>
                 <h1>A card with a table</h1>
                 <a href="#"><i class="fa fa-solid fa-edit"></i> Edit</a>
             </header>
@@ -148,6 +148,8 @@
 
         <article>
             <header>
+                <input type="checkbox" id="card-check-2" class="card-check">
+                <label for="card-check-2" class="card-open-symbol"><i class="fa-solid fa-caret-down"></i></label>
                 <h1>Image with head</h1>
             </header>
             <main>
