Start framework refactor

--- a/task_2_ts/index.html
+++ b/task_2_ts/index.html
@@ -82,7 +82,7 @@
             </header>
             <table id="table-content">
                 <thead id="table-header"></thead>
-                <tbody id="data-table">
+                <tbody id="table-body">
 
                 </tbody>
             </table>
