--- a/task_2_ts/index.html
+++ b/task_2_ts/index.html
@@ -59,11 +59,11 @@
                 <p id="column-selected"></p>
                 <h4>Data type</h4>
                 <p id="column-datatype"></p>
-                <h4>Different entries</h4>
+                <h4 id="title-column-entries">Different entries</h4>
                 <p id="column-entries"></p>
-                <h4>Min</h4>
+                <h4 id="title-column-min">Min</h4>
                 <p id="column-min"></p>
-                <h4>Max</h4>
+                <h4 id="title-column-max">Max</h4>
                 <p id="column-max"></p>
             </div>
         </article>
@@ -72,8 +72,8 @@
             <header>
                 <h2>Filter active column</h2>
             </header>
-            <label for="filter">Filter column:</label><input type="search" id="filter" name="filter"
-                placeholder="Filter" disabled>
+            <label for="filter">Filter column:</label>
+            <input type="search" id="filter" name="filter" placeholder="Filter" disabled>
         </article>
 
         <article style="width: 100%">
@@ -83,7 +83,6 @@
             <table id="table-content">
                 <thead id="table-header"></thead>
                 <tbody id="table-body">
-
                 </tbody>
             </table>
         </article>
