Probably finish up

--- a/task_2_ts/index.html
+++ b/task_2_ts/index.html
@@ -38,7 +38,7 @@
             <header>
                 <h2>Data infos</h2>
             </header>
-            <div id="data-info">
+            <div id="data-info" class="info">
                 <h4>Filename</h4>
                 <p id="data-filename"></p>
                 <h4>File type</h4>
@@ -57,7 +57,7 @@
             <header>
                 <h2>Selected column infos</h2>
             </header>
-            <div id="column-info">
+            <div id="column-info" class="info">
                 <h4>Selected column</h4>
                 <p id="column-selected"></p>
                 <h4>Data type</h4>
